--- a/DarkLogicSkin/HTML/DarkLogic/skin.css
+++ b/DarkLogicSkin/HTML/DarkLogic/skin.css
@@ -1,7 +1,76 @@
-/***************************************************************/
-/**********************  img replacements  *********************/
-/***************************************************************/
+/* Default */
+html, body, tr, tr, p, div, li, input, ul, .x-btn-text, .x-tip .x-tip-body, select, .x-menu-list-item, .x-btn button,
+#ctrlPlaytimeCollapsed, #ctrlCurrentSongInfoCollapsed, #ctrlCurrentSongInfoCollapsed a {
+	font-size: 11px;
+}
 
+/* Logic Teal */
+.x-form-field, .x-combo-list-item, .menu-title {
+	font-size: 11px;
+}
+
+#squeezeboxLogo {
+	left: 20px;
+}
+
+#playerChooser {
+	right: 15px;
+}
+
+#noJS {
+	position: absolute;
+	background-color: white;
+	z-index: 20002;
+	background: radial-gradient(ellipse farthest-side at bottom, #00918d 0%,#000000 100%);
+}
+
+#loading-mask {
+	width: 120%;
+	height: 100%;
+	background: radial-gradient(ellipse at bottom, #00918d 0%,#000000 100%);
+	position: absolute;
+	z-index: 20000;
+	left: 0;
+	top: 0;
+}
+
+div#background {
+	position: absolute;
+	top: 5px;
+	left: 5px;
+	z-index: -1;
+	background: radial-gradient(ellipse farthest-side at bottom, #00918d 0%,#000000 100%);
+	border-radius: 15px;
+}
+
+#ctrlCurrentTitle {
+	height: 30px;
+}
+
+#inner_header .inner_top, .inner_top, .inner_bottom {
+	height: 12px;
+}
+
+.inner_top {
+	border-radius: 12px 12px 0 0;
+}
+
+.inner_bottom {
+	border-radius: 0 0 12px 12px;
+}
+
+#btn_help_image, #btn_settings_image {
+	background-image: url('html/images/btn_help.gif');
+	mask-image: none;
+	background-color: transparent;
+}
+
+#btn_settings_image {
+	background-image: url('html/images/btn_settings.gif');
+}
+
+/********************** Dark Logic Skin **********************/
+/*** images ***/
 .btn-power button {
 	background-image: url('html/images/btn_power_on.gif')
 }
@@ -36,11 +105,7 @@
 	background-image: url('html/images/slim-ext/dlg-bg.gif');
 }
 
-
-/***************************************************************/
-/**********************  Dark Logic Skin  **********************/
-/***************************************************************/
-
+/*** misc ***/
 :root {
 	color-scheme: dark;
 }
@@ -181,6 +246,15 @@ td.sort-asc .x-grid3-hd-inner, td.x-grid3-hd-menu-open .x-grid3-hd-inner {
 	background-color: #5c5c5c !important;
 }
 
+.mouseOver .browseItemDetail,
+.mouseOver .browseItemLink,
+.mouseOver .browsedbListItem,
+.mouseOver a,
+.mouseOver .homeMenuItem {
+	color: white;
+	font-weight: normal;
+}
+
 /* settings tabs font color */
 .x-tab-strip span.x-tab-strip-text, .x-tab-strip-active span.x-tab-strip-text, .x-tab-strip-over span.x-tab-strip-text {
 	color: black !important;
@@ -192,7 +266,6 @@ td.sort-asc .x-grid3-hd-inner, td.x-grid3-hd-menu-open .x-grid3-hd-inner {
 }
 
 /* filebrowser */
-
 #filesystembrowser .x-panel-body {
 	background-color: #2e2e2e;
 }
@@ -242,7 +315,6 @@ input[type="checkbox"] {
 }
 
 /* tooltip */
-
 .x-tip {
 	outline: 1px solid #656565;
 	border-radius: 5px;
@@ -290,10 +362,18 @@ input[type='radio']:checked {
 	color: #dddddd;
 }
 
+/* manage plugins page */
 .pluginList .pluginDescLong:before {
 	background: linear-gradient(transparent 35px, #262626) !important;
 }
 
 .pluginFooter img, .headerLabel img {
 	filter: invert(97%) sepia(1%) saturate(1490%) hue-rotate(265deg) brightness(118%) contrast(73%);
+}
+
+.settings .buttonbar {
+	padding: 6px 13px 0px;
+}
+.x-btn-mr {
+	width: 40px;
 }
